# fastapi-docker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/api/v1/: product.py  sale.py
src/app/core/: config.py  logging.py
src/app/db/: models.py
src/app/models/: schemas.py
src/app/services/: product_services.py  sale_services.py
